--- a/appstate.json
+++ b/appstate.json
@@ -1,7 +1,101 @@
-....
-
-
-        𝐚dd 𝐲𝐨𝐮𝐫 𝐜𝟑𝐜 𝐅𝐛𝐬𝐭𝐚𝐭𝐞 𝐜𝐨𝐨𝐤𝐢𝐞 🍪
-
-
-.....
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261562688607607%22%3A%22b261DxwQ%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.745Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "sb",
+        "value": "xUwhZ09nh_fkpe_T_wq8WpO5",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "wd",
+        "value": "1400x961",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "datr",
+        "value": "Ec83aLJqKjbcNc1GhDaIVOqd",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61562688607607",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "xs",
+        "value": "48%3A-bbQ26PTh9OWQA%3A2%3A1748488062%3A-1%3A-1%3A%3AAcW_dbd1d7mLXYyh-ZcHqY6plCSBdTSEKroPFh-bQw",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1748574953005%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    },
+    {
+        "key": "fr",
+        "value": "1hLqaXLwfx9ExwKja.AWc8CIai7dtXS3-tCYVH0ARz2pUurbT3nVSN1jQYMrrxtAjeluY.BoOSLl..AAA.0.0.BoOZu8.AWdoM6eCwfmu_FG046pQi70e3RQ",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-05-30T11:51:28.746Z",
+        "lastAccessed": "2025-05-30T11:51:28.746Z"
+    }
+]
