--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "NOOB☢️_𖣘-BOT ⚠️",
-    "PREFIX": "/",
+    "PREFIX": ".",
     "ADMINBOT": [
         "61570226640452",
         "100070013974971",
