--- a/appstate.json
+++ b/appstate.json
@@ -1,21 +1,21 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261562688607607%22%3A%22b261DxwQ%22%7D",
+        "value": "%7B%2261562688607607%22%3A%22Ui3qZGEX%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.745Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.781Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "sb",
-        "value": "xUwhZ09nh_fkpe_T_wq8WpO5",
+        "value": "z3PVZ1MlpsJoQPuxORkMAw8g",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "wd",
@@ -41,17 +41,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "datr",
-        "value": "Ec83aLJqKjbcNc1GhDaIVOqd",
+        "value": "L2FVaG3iscGmwxgKsjqogVFr",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "c_user",
@@ -68,34 +68,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "xs",
-        "value": "48%3A-bbQ26PTh9OWQA%3A2%3A1748488062%3A-1%3A-1%3A%3AAcW_dbd1d7mLXYyh-ZcHqY6plCSBdTSEKroPFh-bQw",
+        "value": "17%3Az7McTX2lj2sP2A%3A2%3A1750426162%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1748574953005%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     },
     {
         "key": "fr",
-        "value": "1hLqaXLwfx9ExwKja.AWc8CIai7dtXS3-tCYVH0ARz2pUurbT3nVSN1jQYMrrxtAjeluY.BoOSLl..AAA.0.0.BoOZu8.AWdoM6eCwfmu_FG046pQi70e3RQ",
+        "value": "15IowLP9FUDJgZwXd.AWdomrMrxO2z25ojK1i04WuUQ7btGwMHdNGlo0vnlJFEMP1YSTM.BoNnrj..AAA.0.0.BoVWI0.AWcMztqdf8ICbNmU68iBT-GW32M",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-05-30T11:51:28.746Z",
-        "lastAccessed": "2025-05-30T11:51:28.746Z"
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1750426153858%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-06-20T13:29:23.782Z",
+        "lastAccessed": "2025-06-20T13:29:23.782Z"
     }
 ]
