--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.781Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.145Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.148Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.148Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.148Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "wd",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.148Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "datr",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.148Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.148Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "c_user",
@@ -68,34 +68,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.148Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "xs",
-        "value": "17%3Az7McTX2lj2sP2A%3A2%3A1750426162%3A-1%3A-1",
+        "value": "17%3Az7McTX2lj2sP2A%3A2%3A1750426162%3A-1%3A-1%3A%3AAcUW_Ps61olqVk2ZESgi_HMUiA9L7HOM87JrKMPrWg",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.148Z",
+        "lastAccessed": "2025-06-21T04:38:39.148Z"
     },
     {
         "key": "fr",
-        "value": "15IowLP9FUDJgZwXd.AWdomrMrxO2z25ojK1i04WuUQ7btGwMHdNGlo0vnlJFEMP1YSTM.BoNnrj..AAA.0.0.BoVWI0.AWcMztqdf8ICbNmU68iBT-GW32M",
+        "value": "1PpXUDD1PwKXvcqMX.AWcq5FYFK9u5bG633KMWqFMobereXrELaHuJIqh2OWp6hHbO2ZY.BoVjMD..AAA.0.0.BoVjdD.AWfgvcr_fsmTI0Gyje55zw-d0rg",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
-    },
-    {
-        "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1750426153858%2C%22v%22%3A1%7D",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-20T13:29:23.782Z",
-        "lastAccessed": "2025-06-20T13:29:23.782Z"
+        "creation": "2025-06-21T04:38:39.149Z",
+        "lastAccessed": "2025-06-21T04:38:39.149Z"
     }
 ]
