--- a/appstate.json
+++ b/appstate.json
@@ -1,21 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261562688607607%22%3A%22rP2CbAO5%22%7D",
+        "value": "%7B%2261562688607607%22%3A%22vruZdhsB%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.371Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.513Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
-        "key": "sb",
-        "value": "z3PVZ1MlpsJoQPuxORkMAw8g",
+        "key": "datr",
+        "value": "Es74Z30sUPptqcQLdQ4SZseC",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
+    },
+    {
+        "key": "sb",
+        "value": "Es74Z-7KJfN90OX7GoNu2-zO",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
         "key": "ps_n",
@@ -32,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
         "key": "wd",
@@ -41,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
         "key": "locale",
@@ -50,17 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
-    },
-    {
-        "key": "datr",
-        "value": "PVxWaHbek16pc4MfVXf0jTr3",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
         "key": "c_user",
@@ -68,34 +68,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
         "key": "xs",
-        "value": "2%3AMMZEtQdIvWUqLA%3A2%3A1750490497%3A-1%3A-1",
+        "value": "50%3A7Eyl3SmXjZZiZA%3A2%3A1751977439%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
         "key": "fr",
-        "value": "1ADbFVWdFrKEVJf9n.AWcNJ6yUepz_vdib7sMSsU-UWCj9Rmv8tzOquqDA_BmEsaIJUQM.BoVjdS..AAA.0.0.BoVl2D.AWepPxPwDUIgTTSSLw2WU4s8HS8",
+        "value": "1525MvnTmb0J2IAtR.AWdxKUkwEIJZtZv6LeLnPqMdepEo4YxQbH5QD7BV4HuxyFsoa-o.BobQ0Q..AAA.0.0.BobQ3p.AWeDmz6A5qUIzRDgsnywIq-vvcU",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     },
     {
         "key": "presence",
-        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1750490507773%2C%22v%22%3A1%7D",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1751977453156%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-06-21T07:22:26.372Z",
-        "lastAccessed": "2025-06-21T07:22:26.372Z"
+        "creation": "2025-07-08T12:25:25.514Z",
+        "lastAccessed": "2025-07-08T12:25:25.514Z"
     }
 ]
