--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261562688607607%22%3A%22GsHfaJOh%22%7D",
+        "value": "%7B%2261562688607607%22%3A%22Wi8LpM1u%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.199Z",
-        "lastAccessed": "2025-07-10T09:23:41.205Z"
+        "creation": "2025-07-18T08:26:24.971Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
     },
     {
         "key": "sb",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.205Z",
-        "lastAccessed": "2025-07-10T09:23:41.205Z"
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.205Z",
-        "lastAccessed": "2025-07-10T09:23:41.205Z"
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
     },
     {
         "key": "ps_n",
@@ -32,35 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.205Z",
-        "lastAccessed": "2025-07-10T09:23:41.205Z"
-    },
-    {
-        "key": "wd",
-        "value": "1400x961",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.206Z",
-        "lastAccessed": "2025-07-10T09:23:41.206Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.206Z",
-        "lastAccessed": "2025-07-10T09:23:41.206Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61562688607607",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.206Z",
-        "lastAccessed": "2025-07-10T09:23:41.206Z"
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
     },
     {
         "key": "datr",
@@ -68,25 +41,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.206Z",
-        "lastAccessed": "2025-07-10T09:23:41.206Z"
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
+    },
+    {
+        "key": "wd",
+        "value": "1400x961",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61562688607607",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
     },
     {
         "key": "xs",
-        "value": "32%3AWVnbLXbxFP7Klg%3A2%3A1752139416%3A-1%3A-1",
+        "value": "18%3Aqsr1plGCDOtBzQ%3A2%3A1752827173%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.206Z",
-        "lastAccessed": "2025-07-10T09:23:41.206Z"
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
     },
     {
         "key": "fr",
-        "value": "1VuwrwGHf5U4dOgIY.AWd5sRG_p_-3M-hGTY0pfvf-PBpSRKEXREirsGzZ435-lBS2hkY.Bobqn0..AAA.0.0.Bob4aa.AWdf8S75FHMbEdlkM4PyqDUC-bo",
+        "value": "1VuwrwGHf5U4dOgIY.AWe_kt0wSaEPK9rvuPzaIEupJvW3-JOyjHz_fUf2mJFWArnBjiQ.Bobqn0..AAA.0.0.BoegUm.AWcVawjXsEErrleHCW-KCTxj-y0",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-07-10T09:23:41.207Z",
-        "lastAccessed": "2025-07-10T09:23:41.207Z"
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1752827176388%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-18T08:26:24.972Z",
+        "lastAccessed": "2025-07-18T08:26:24.972Z"
     }
 ]
